--- a/scenarios/data.meteo.unican.es/stop/tomcats.yml
+++ b/scenarios/data.meteo.unican.es/stop/tomcats.yml
@@ -1,12 +1,12 @@
 - name: Stop tomcats
-  command: "{{ tomcat_home }}/bin/shutdown.sh"
+  command: "{{ item.home }}/bin/shutdown.sh"
   args:
-    removes: "{{ tomcat_bases }}/{{ item.name }}/logs/catalina.pid"
+    removes: "{{ item.base }}/logs/catalina.pid"
   environment:
-    CATALINA_BASE: "{{ tomcat_bases }}/{{ item.name }}"
+    CATALINA_BASE: "{{ item.base }}"
   with_items: "{{ tomcats }}"
   ignore_errors: True # If catalina.pid is present but process is not running, we don't want an error
 
 - name: Remove catalina.pid
-  file: path={{ tomcat_bases }}/{{ item.name }}/logs/catalina.pid state=absent
+  file: path={{ item.base }}/logs/catalina.pid state=absent
   with_items: "{{ tomcats }}"
