Added tds_content as an inventory variable. Useful for local testing

--- a/scenarios/data.meteo.unican.es/catalogs.yml
+++ b/scenarios/data.meteo.unican.es/catalogs.yml
@@ -14,7 +14,7 @@
 
     - name: Synchronize tds-content
       run_once: True
-      synchronize: src=tds-content dest={{ root }}
+      synchronize: src={{ tds_content }} dest={{ root }}
 
     - name: Set catalog and dataset permissions
       file: path={{ root }}/{{ item }} mode=u=rwX,g=rwX,o=rX recurse=yes
