--- a/scenarios/data.meteo.unican.es/install.yml
+++ b/scenarios/data.meteo.unican.es/install.yml
@@ -66,7 +66,7 @@
 
     - name: Synchronize tds-content
       run_once: True
-      synchronize: src=tds-content dest={{ root }}
+      synchronize: src={{ tds_content }} dest={{ root }}
 
     - name: Find directory catalogs
       find: paths={{ root }}/tds-content recurse=no file_type=any
