--- a/scenarios/data.meteo.unican.es/files/httpd.conf
+++ b/scenarios/data.meteo.unican.es/files/httpd.conf
@@ -174,6 +174,16 @@ NameVirtualHost *:80
         Order deny,allow
         Deny from All
 </Location>
+## BEGIN CMCC KPIs
+LoadModule geoip_module modules/mod_geoip.so
+<IfModule mod_geoip.c>
+  GeoIPEnable On
+  GeoIPDBFile /usr/share/GeoIP/GeoIP.dat
+</IfModule>
+LogFormat "%{GEOIP_COUNTRY_CODE}e %{%s}t %r %>s %B %D \"%{User-Agent}i\"" country_downloads
+SetEnvIf Request_URI "^/thredds/fileServer.*$" data_log
+CustomLog logs/country_downloads_log country_downloads env=data_log
+## END CMCC KPIs
 <VirtualHost *:80>
 
 	Alias /.well-known/acme-challenge/ /var/www/html/.well-known/acme-challenge/
