Fixed tds5 in prod

--- a/roles/devel/meta/main.yml
+++ b/roles/devel/meta/main.yml
@@ -2,7 +2,7 @@ dependencies:
   - role: tomcat
     tags: devels
   - role: tds
-    tds_home: "{{ tomcat.home }}/webapps/thredds"
+    tds_home: "{{ tomcat.home }}/webapps/{{ tds_context }}"
     tags: devels
   - role: worker
     tomcats:
