--- a/scenarios/data.meteo.unican.es/files/httpd.conf
+++ b/scenarios/data.meteo.unican.es/files/httpd.conf
@@ -184,6 +184,11 @@ LogFormat "%{GEOIP_COUNTRY_CODE}e %{%s}t %r %>s %B %D \"%{User-Agent}i\"" countr
 SetEnvIf Request_URI "^/thredds/fileServer.*$" data_log
 CustomLog logs/country_downloads_log country_downloads env=data_log
 ## END CMCC KPIs
+<Location /tds5>
+  #SetOutputFilter DEFLATE
+  ProxyPass ajp://192.168.202.33:7017/tds5
+  ProxyPassReverse ajp://192.168.202.33:7017/tds5
+</Location>
 <VirtualHost *:80>
 
 	Alias /.well-known/acme-challenge/ /var/www/html/.well-known/acme-challenge/
