--- a/scenarios/data.meteo.unican.es/files/httpd.conf
+++ b/scenarios/data.meteo.unican.es/files/httpd.conf
@@ -184,6 +184,7 @@ LogFormat "%{GEOIP_COUNTRY_CODE}e %{%s}t %r %>s %B %D \"%{User-Agent}i\"" countr
 SetEnvIf Request_URI "^/thredds/fileServer.*$" data_log
 CustomLog logs/country_downloads_log country_downloads env=data_log
 ## END CMCC KPIs
+RedirectMatch "^/$" "/thredds"
 <Location /tds5>
   #SetOutputFilter DEFLATE
   ProxyPass ajp://192.168.202.33:7017/tds5
