--- a/scenarios/data.meteo.unican.es/install.yml
+++ b/scenarios/data.meteo.unican.es/install.yml
@@ -153,18 +153,15 @@
 
     - name: Template modproxy.conf
       template: src=templates/modproxy.conf.j2 dest={{ modproxy_conf }}
-      tags:
-        - update-workers
-        - update-clusters
+      tags: update-workers
 
     - name: Add tds5 proxy
       blockinfile:
         path: "{{ modproxy_conf }}"
         marker: "# {mark} TDS5"
-        insertbefore: 'ProxyPass "/thredds"'
-        block: |
-          ProxyPass "/thredds/catalog/devel/tds5" "balancer://tds5/tds5/catalog"
-          ProxyPassReverse "/thredds/catalog/devel/tds5" "balancer://tds5/tds5/catalog"
+        insertbefore: ProxyPass "/thredds"
+        block: "{{ tds5_paths }}"
+      tags: update-workers
 
     - name: Add additional reverse proxies to {{ modproxy_conf }}
       blockinfile:
