--- a/scenarios/data.meteo.unican.es/files/httpd.conf
+++ b/scenarios/data.meteo.unican.es/files/httpd.conf
@@ -149,11 +149,12 @@ TraceEnable Off
 #  ESGF-HTTPD-CONF VERSION: 1.0.11
 
 NameVirtualHost *:80
-<Location "/server-status">
-    SetHandler server-status
-    Order deny,allow
-    Deny from all
-</Location>
+# this makes server-status publicily visible somehow...
+#<Location "/server-status">
+#    SetHandler server-status
+#    Order deny,allow
+#    Deny from all
+#</Location>
 <Location / >
 	<LimitExcept POST GET>
 		Order deny,allow
