--- a/scenarios/data.meteo.unican.es/start.yml
+++ b/scenarios/data.meteo.unican.es/start.yml
@@ -33,7 +33,9 @@
 
 - name: Start database
   hosts: databases
-  tags: databases
+  tags:
+    - databases
+    - start
   tasks:
     - command: nohup bin/startNetworkServer &
       args:
