--- a/scenarios/data.meteo.unican.es/devels/tds5_data.yml
+++ b/scenarios/data.meteo.unican.es/devels/tds5_data.yml
@@ -24,8 +24,8 @@
             ProxyPassReverse ajp://{{ ansible_all_ipv4_addresses[0] }}:{{ devels.tds5_data.ajp }}/tds5
           </Location>
           <Location /thredds/catalog/devel/tds5>
-            ProxyPass ajp://192.168.202.35:7017/tds5
-            ProxyPassReverse ajp://192.168.202.35:7017/tds5
+            ProxyPass ajp://{{ ansible_all_ipv4_addresses[0] }}:{{ devels.tds5_data.ajp }}/tds5
+            ProxyPassReverse ajp://{{ ansible_all_ipv4_addresses[0] }}:{{ devels.tds5_data.ajp }}/tds5
           </Location>
       tags: update_workers
 
