--- a/scenarios/data.meteo.unican.es/devels/cordex-esdm.yml
+++ b/scenarios/data.meteo.unican.es/devels/cordex-esdm.yml
@@ -1,14 +1,17 @@
 - name: Install devel TDS CORDEX-ESDM
   hosts: wn023
+  vars:
+    tomcat: "{{ devels.cordex_esdm }}"
   roles:
     - role: devel
-      tomcat: "{{ devels.cordex_esdm }}"
   tasks:
-    - name: Start tomcat
+    - name: Start
+      tags: start
       include_tasks:
         file: ../restart.yml
+    - name: Stop
+      tags: stop
+      include_tasks:
+        file: ../stop/tomcat.yml
         apply:
-          tags: start
-      vars:
-        tomcat: "{{ devels.cordex_esdm }}"
-      tags: start
+          tags: stop
