--- a/roles/esgfbase/tasks/main.yml
+++ b/roles/esgfbase/tasks/main.yml
@@ -84,3 +84,13 @@
   command: "bash /tmp/Miniconda2-latest-Linux-x86_64.sh -b -p {{ conda.home }}"
   args:
     creates: "{{ conda.home }}"
+
+# publisher
+- name: Copy esgf-pub conda environment
+  copy: src=files/esgfpub-environment.yml dest=/tmp/esgfpub-environment.yml
+
+- name: Create esgf-pub conda environment
+  command: "{{ conda.exe }} env create --file /tmp/esgfpub-environment.yml -p {{ conda.home }}/envs/esgf-pub"
+  args:
+    creates: "{{ conda.home }}/envs/esgf-pub"
+
