--- a/roles/jupyterhub/defaults/main.yml
+++ b/roles/jupyterhub/defaults/main.yml
@@ -2,3 +2,5 @@ conda:
   home: "{{ ansible_env.HOME }}/miniconda2"
   exe: "{{ ansible_env.HOME }}/miniconda2/bin/conda"
   actv: "source {{ ansible_env.HOME }}/miniconda2/bin/activate"
+
+jupyterhub_home: "{{ ansible_env.HOME }}/jupyterhub"
