--- a/roles/jupyterhub/defaults/main.yml
+++ b/roles/jupyterhub/defaults/main.yml
@@ -4,3 +4,5 @@ conda:
   actv: "source {{ ansible_env.HOME }}/miniconda2/bin/activate"
 
 jupyterhub_home: "{{ ansible_env.HOME }}/jupyterhub"
+jupyterhub_bind_url: http://127.0.0.1:8000
+jupyterhub_hub_connect_ip: 127.0.0.1
